../blog-20170520.html -> blog-20170520.html ../index.html -> index.html shuesblog/index.html thingsnobodycaresaboutbutme.html ../index.html

--- a/index.html
+++ b/index.html
@@ -1,42 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Welcome to my Super Pi Webserver!</title>
-<style>
-    body {
-        width: 35em;
-        margin: 0 auto;
-        font-family: Tahoma, Verdana, Arial, sans-serif;
-    }
-</style>
-</head>
-<body>
-<h1>Welcome to my 1-node Supercomputer!</h1>
-<p>
-Apparently, further configuration is required. Also, Shue is awesome.
-</p>
-
-<p>
-Still trying to figure out why after a day I cannot connect to the nanopi
-anymore. Clearly, it is still running, and has an IP address. However, it is
-refusing both the SSH as well as the nginx connections. Maybe the extra
-debugging info I added will help.
-</p>
-
-<p>I'm running nginx (pronounced en-gin-x). Online documentation and support is
-available at
-<a href="http://nginx.org/">nginx.org</a>.<br/>
-</p>
-
-<p>
-Contents:
-<em>
-<a href="blog-20170520.html">2017-05-20</a>.<br/>
-</em>
-</p>
-
-<p><em>Thank you for using nginx.</em></p>
-<p><em>You are welcome.</em></p>
-<p><em>(Hm, shouldn't I be thanking them?).</em></p>
-</body>
-</html>
+2017/index.html
