--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-2017/index.html
+<meta http-equiv="refresh" content="0; url=http://2-node-supercomputer.spacetechnology.net/2017/" />
+
+<p><a href="http://2-node-supercomputer.spacetechnology.net/2017/">Redirect</a></p>
