--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<meta http-equiv="refresh" content="0; url=http://2-node-supercomputer.spacetechnology.net/2018/" />
+<meta http-equiv="refresh" content="0; url=./2018/" />
 
-<p><a href="http://2-node-supercomputer.spacetechnology.net/2018/">Redirect</a></p>
+<p><a href="./2018/">Redirect</a></p>
