--- a/scripts/snippets/head.html
+++ b/scripts/snippets/head.html
@@ -4,7 +4,12 @@
     body {
         max-width: 35em;
         margin: 0 auto;
+        text-align: justify;
         font-family: Tahoma, Verdana, Arial, sans-serif;
+    }
+    h1 {
+        text-align: left;
     }
 </style>
 </head>
+<!-- vim: set sw=4 sts=4 et : -->
