indent code blocks

--- a/scripts/snippets/head.html
+++ b/scripts/snippets/head.html
@@ -10,6 +10,9 @@
     h1 {
         text-align: left;
     }
+    pre {
+        margin: 0 4em;
+    }
 </style>
 </head>
 <!-- vim: set sw=4 sts=4 et : -->
