--- a/scripts/snippets/head.html
+++ b/scripts/snippets/head.html
@@ -1,9 +1,15 @@
 <head>
 <title>Welcome to my 2-node Supercomputer!</title>
 <style>
-    body {
+    html {
         max-width: 35em;
-        margin: 0 auto;
+        margin-left: auto;
+        margin-right: auto;
+        padding-left: 1em;
+        padding-right: 1em;
+        justify-content: center;
+    }
+    body {
         text-align: justify;
         font-family: Tahoma, Verdana, Arial, sans-serif;
     }
@@ -12,6 +18,13 @@
     }
     pre {
         margin: 0 4em;
+    }
+    footer {
+        width: calc(100% - 3em);
+        max-width: calc(35em - 3em);
+        position: absolute;
+        bottom: 0;
+        text-align: center;
     }
 </style>
 </head>
