--- a/scripts/snippets/head.html
+++ b/scripts/snippets/head.html
@@ -15,10 +15,8 @@
         font-family: Tahoma, Verdana, Arial, sans-serif;
     }
     footer {
-        width: calc(100% - 3em);
-        max-width: calc(35em - 3em);
-        position: absolute;
-        text-align: center;
+        padding-top: 1em;
+        bottom: 0;
     }
     h1 {
         text-align: left;
