--- a/scripts/snippets/head.html
+++ b/scripts/snippets/head.html
@@ -2,6 +2,32 @@
 <meta charset="UTF-8"/>
 <title>Welcome to my 2-node Supercomputer!</title>
 <style>
+    @media (prefers-color-scheme: light) {
+        :root {
+		background: white;
+		color: #333;
+                --readmorecolor: blue;
+	}
+	a:link {
+		color: blue;
+	}
+	a:visited {
+		color: purple;
+	}
+    }
+    @media (prefers-color-scheme: dark) {
+        :root {
+		background: #333;
+		color: white;
+                --readmorecolor: #74a0ff; /* light blue */
+	}
+	a:link {
+		color: #add8ff;  /* darker blue than lightblue */
+	}
+	a:visited {
+		color: #b695c0;  /* a light purple */
+	}
+    }
     html {
         max-width: 35em;
         margin-left: auto;
