dark mode for initial redirect site to prevent flickering

--- a/index.html
+++ b/index.html
@@ -1,3 +1,31 @@
 <meta http-equiv="refresh" content="0; url=./2020/" />
+<style>
+    @media (prefers-color-scheme: light) {
+        :root {
+            background: white;
+            color: #333;
+            --readmorecolor: blue;
+        }
+        a:link {
+            color: blue;
+        }
+        a:visited {
+            color: purple;
+        }
+    }
+    @media (prefers-color-scheme: dark) {
+        :root {
+            background: #333;
+            color: white;
+            --readmorecolor: #74a0ff; /* light blue */
+        }
+        a:link {
+            color: #add8ff;  /* darker blue than lightblue */
+        }
+        a:visited {
+            color: #b695c0;  /* a light purple */
+        }
+    }
+</style>
 
 <p><a href="./2020/">Redirect</a></p>
