--- a/scripts/snippets/head.html
+++ b/scripts/snippets/head.html
@@ -29,6 +29,7 @@
         }
     }
     html {
+        width: device-width;
         max-width: 35em;
         margin-left: auto;
         margin-right: auto;
