--- a/scripts/snippets/head.html
+++ b/scripts/snippets/head.html
@@ -1,5 +1,6 @@
 <head>
 <meta charset="UTF-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Welcome to my 2-node Supercomputer!</title>
 <style>
     @media (prefers-color-scheme: light) {
@@ -28,8 +29,12 @@
             color: #b695c0;  /* a light purple */
         }
     }
+    @media screen and (max-width: 35em) {
+        :root {
+            width: 100vw-2em;
+        }
+    }
     html {
-        width: device-width;
         max-width: 35em;
         margin-left: auto;
         margin-right: auto;
